test/expected/explain_co_exclam_k_b.out
struct S; explain bool operator!(S) const
            ^
13: error: member operator ! must have exactly 0 parameters
